--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <a id="場所" class="anchor" href="#%E5%A0%B4%E6%89%80" aria-hidden="true"><span class="octicon octicon-link"></span></a>場所</h3>
 
 <ul>
-<li>神田ラウンジ (予定) (<a href="http://kanda-lounge.com">http://kanda-lounge.com</a> )</li>
+<li>神田ラウンジ (予定) (<a href="http://kanda-lounge.com">http://kanda-lounge.com</a>)</li>
+<li>神田駅徒歩2分</li>
 </ul>
 
 <h3>
@@ -68,17 +69,15 @@
 <a id="参加費" class="anchor" href="#%E5%8F%82%E5%8A%A0%E8%B2%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>参加費</h3>
 
 <ul>
-<li>3000円</li>
-<li>Web から支払った場合は200円引!</li>
-<li>12/15 までに払った場合は 100円引</li>
+<li>3000円 (当日に現金で)</li>
 </ul>
 
-<h3>
-<a id="キャンセルポリシー" class="anchor" href="#%E3%82%AD%E3%83%A3%E3%83%B3%E3%82%BB%E3%83%AB%E3%83%9D%E3%83%AA%E3%82%B7%E3%83%BC" aria-hidden="true"><span class="octicon octicon-link"></span></a>キャンセルポリシー</h3>
+<h4>
+<a id="キャンセルポリシー" class="anchor" href="#%E3%82%AD%E3%83%A3%E3%83%B3%E3%82%BB%E3%83%AB%E3%83%9D%E3%83%AA%E3%82%B7%E3%83%BC" aria-hidden="true"><span class="octicon octicon-link"></span></a>キャンセルポリシー</h4>
 
 <ul>
-<li>前日までなら1000円</li>
-<li>当日キャンセルは3000円</li>
+<li>前日までのキャンセルは 1000円</li>
+<li>当日のキャンセルは 3000円</li>
 <li>銀行振込にて</li>
 </ul>
 
