--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <li>田中 京介
 
 <ul>
+<li>元3-B (情報システム分野)</li>
 <li><a href="https://twitter.com/sukuhino">@sukuhino</a></li>
 <li><a href="mailto:kyontan@live.jp">kyontan@live.jp</a></li>
 </ul>
@@ -100,6 +101,7 @@
 <li>真島 大樹
 
 <ul>
+<li>元3-C (機械システム分野)</li>
 <li>(<a href="https://twitter.com/akira_tech">@akira_tech</a>)</li>
 </ul>
 </li>
