Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
 <ul>
 <li>神田ラウンジ (予定) (<a href="http://kanda-lounge.com">http://kanda-lounge.com</a>)</li>
 <li>神田駅徒歩2分</li>
+<li>(<a href="http://kanda-lounge.com/access">http://kanda-lounge.com/access</a>)</li>
 </ul>
-
-<h3>
-<a id="アクセス-httpkanda-loungecomaccess-" class="anchor" href="#%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B9-httpkanda-loungecomaccess-" aria-hidden="true"><span class="octicon octicon-link"></span></a>アクセス: (<a href="http://kanda-lounge.com/access">http://kanda-lounge.com/access</a> )</h3>
 
 <h3>
 <a id="その他" class="anchor" href="#%E3%81%9D%E3%81%AE%E4%BB%96" aria-hidden="true"><span class="octicon octicon-link"></span></a>その他</h3>
@@ -57,13 +55,14 @@
 <ul>
 <li>(<a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a>)</li>
 <li>フリードリンク</li>
-<li>電源 / Wi-Fi</li>
+<li>軽食(?)も用意します! (宅配ピザ等 / 希望があれば申込時に)</li>
+<li>電源 / Wi-Fi あり</li>
 </ul>
 
 <h2>
 <a id="募集" class="anchor" href="#%E5%8B%9F%E9%9B%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>募集</h2>
 
-<p>Google Forms で 12/4 - 募集開始</p>
+<p>Google Forms で 12/4 - 募集開始予定</p>
 
 <h3>
 <a id="参加費" class="anchor" href="#%E5%8F%82%E5%8A%A0%E8%B2%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>参加費</h3>
@@ -102,7 +101,7 @@
 
 <ul>
 <li>元3-C (機械システム分野)</li>
-<li>(<a href="https://twitter.com/akira_tech">@akira_tech</a>)</li>
+<li><a href="https://twitter.com/akira_tech">@akira_tech</a></li>
 </ul>
 </li>
 </ul>
