Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Year-end-party-2015</h1>
-        <h2>豆腐8期忘年会 in 2015</h2>
+        <h2>東工大附属 8期 (2015/3卒) 忘年会 in 2015</h2>
         <a href="https://github.com/kyontan/year-end-party-2015" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -28,9 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>2015年 豆腐8期忘年会まとめ</p>
-
-<h2>
+          <h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
 
 <h3>
@@ -86,7 +84,7 @@
 <p>特に無し (随時更新します)</p>
 
 <h3>
-<a id="連絡先" class="anchor" href="#%E9%80%A3%E7%B5%A1%E5%85%88" aria-hidden="true"><span class="octicon octicon-link"></span></a>連絡先</h3>
+<a id="主催--連絡先" class="anchor" href="#%E4%B8%BB%E5%82%AC--%E9%80%A3%E7%B5%A1%E5%85%88" aria-hidden="true"><span class="octicon octicon-link"></span></a>主催 / 連絡先</h3>
 
 <ul>
 <li>田中 京介
