--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
 
 <h3>
+<a id="更新履歴" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%B1%A5%E6%AD%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a>更新履歴</h3>
+
+<ul>
+<li>早期申込割引 / LT (ライトニングトーク) のお知らせについて追記しました (2015/12/3 17:40)</li>
+</ul>
+
+<h3>
 <a id="日時" class="anchor" href="#%E6%97%A5%E6%99%82" aria-hidden="true"><span class="octicon octicon-link"></span></a>日時</h3>
 
 <ul>
@@ -43,17 +50,18 @@
 
 <ul>
 <li>神田ラウンジ (予定) (<a href="http://kanda-lounge.com">http://kanda-lounge.com</a>)</li>
-<li>神田駅徒歩2分</li>
-<li>(<a href="http://kanda-lounge.com/access">http://kanda-lounge.com/access</a>)</li>
+<li>神田駅 徒歩2分</li>
+<li><a href="http://kanda-lounge.com/access">http://kanda-lounge.com/access</a></li>
 </ul>
 
 <h3>
 <a id="その他" class="anchor" href="#%E3%81%9D%E3%81%AE%E4%BB%96" aria-hidden="true"><span class="octicon octicon-link"></span></a>その他</h3>
 
 <ul>
-<li>(<a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a>)</li>
+<li><a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a></li>
 <li>フリードリンク</li>
 <li>軽食(?)も用意します! (宅配ピザ等 / 希望があれば申込時に)</li>
+<li><em>食べ物/飲み物 持ち込み歓迎です!</em></li>
 <li>電源 / Wi-Fi あり</li>
 </ul>
 
@@ -67,6 +75,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
+<li>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</li>
 </ul>
 
 <h4>
@@ -75,7 +84,17 @@
 <ul>
 <li>前日までのキャンセルは 1000円</li>
 <li>当日のキャンセルは 3000円</li>
-<li>銀行振込にて</li>
+<li>銀行振込/直接受け渡しにて</li>
+</ul>
+
+<h3>
+<a id="lt-ライトニングトーク" class="anchor" href="#lt-%E3%83%A9%E3%82%A4%E3%83%88%E3%83%8B%E3%83%B3%E3%82%B0%E3%83%88%E3%83%BC%E3%82%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>LT (ライトニングトーク)</h3>
+
+<ul>
+<li>近況報告とか何か話したいことを <em>5分</em> 程度で発表出来る場を設けたいと思っています。</li>
+<li>テーマ不問、美味しいことでもやったことでもやりたいことでも</li>
+<li>プロジェクター/PC は用意します</li>
+<li>参加希望の方は 申込時の備考欄 または 主催(田中) までご連絡ください。</li>
 </ul>
 
 <h3>
