自分のアドレスを追加

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 <ul>
 <li>元3-C (機械システム分野)</li>
 <li><a href="https://twitter.com/akira_tech">@akira_tech</a></li>
+<li><a href="mailto:taikimajima@gmail.com">taikimajima@gmail.com</a></li>
 </ul>
 </li>
 </ul>
