Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h2>
+<a id="申込みページはこちら-httpgooglformswy6l497ar7" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89-httpgooglformswy6l497ar7" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページはこちら: <a href="http://goo.gl/forms/wy6l497ar7">http://goo.gl/forms/wy6l497ar7</a>
+</h2>
+
+<h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
 
 <h3>
@@ -36,6 +40,7 @@
 
 <ul>
 <li>早期申込割引 / LT (ライトニングトーク) のお知らせについて追記しました (2015/12/3 17:40)</li>
+<li>参加申込みの受付を開始しました (2015/12/3 18:05)</li>
 </ul>
 
 <h3>
@@ -68,7 +73,10 @@
 <h2>
 <a id="募集" class="anchor" href="#%E5%8B%9F%E9%9B%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>募集</h2>
 
-<p>Google Forms で 12/4 - 募集開始予定</p>
+<ul>
+<li>Google Forms で 12/3 - 募集中</li>
+<li><a href="http://goo.gl/forms/wy6l497ar7">http://goo.gl/forms/wy6l497ar7</a></li>
+</ul>
 
 <h3>
 <a id="参加費" class="anchor" href="#%E5%8F%82%E5%8A%A0%E8%B2%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>参加費</h3>
@@ -119,7 +127,6 @@
 <ul>
 <li>元3-C (機械システム分野)</li>
 <li><a href="https://twitter.com/akira_tech">@akira_tech</a></li>
-<li><a href="mailto:taikimajima@gmail.com">taikimajima@gmail.com</a></li>
 </ul>
 </li>
 </ul>
