Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h2>
-<a id="申込みページはこちら-httpgooglformswy6l497ar7" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89-httpgooglformswy6l497ar7" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページはこちら: <a href="http://goo.gl/forms/wy6l497ar7">http://goo.gl/forms/wy6l497ar7</a>
+<a id="申込みページはこちら" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページは<a href="http://goo.gl/forms/wy6l497ar7">こちら</a>
 </h2>
 
 <h2>
