--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
           <h2>
 <a id="申込みページはこちら" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページは<a href="http://goo.gl/forms/wy6l497ar7">こちら</a>
 </h2>
+<h3><em>早期申込割引実施中！　申し込みはお早めに</em></h3>
 
 <h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
-
+<p>豆腐8期卒の人たちが集まってわいわい年を忘れようという催しです。</p>
 <h3>
 <a id="更新履歴" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%B1%A5%E6%AD%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a>更新履歴</h3>
 
@@ -63,8 +64,8 @@
 <a id="その他" class="anchor" href="#%E3%81%9D%E3%81%AE%E4%BB%96" aria-hidden="true"><span class="octicon octicon-link"></span></a>その他</h3>
 
 <ul>
-<li><a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a></li>
-<li>フリードリンク</li>
+<li>会場設備<a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a></li>
+<li>ドリンクバーです！</li>
 <li>軽食(?)も用意します! (宅配ピザ等 / 希望があれば申込時に)</li>
 <li><em>食べ物/飲み物 持ち込み歓迎です!</em></li>
 <li>電源 / Wi-Fi あり</li>
@@ -83,7 +84,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</li>
+<li><b>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</b></li>
 </ul>
 
 <h4>
@@ -108,7 +109,7 @@
 <h3>
 <a id="連絡事項" class="anchor" href="#%E9%80%A3%E7%B5%A1%E4%BA%8B%E9%A0%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>連絡事項</h3>
 
-<p>特に無し (随時更新します)</p>
+<p>アルコールは出ません</p>
 
 <h3>
 <a id="主催--連絡先" class="anchor" href="#%E4%B8%BB%E5%82%AC--%E9%80%A3%E7%B5%A1%E5%85%88" aria-hidden="true"><span class="octicon octicon-link"></span></a>主催 / 連絡先</h3>
@@ -127,6 +128,7 @@
 <ul>
 <li>元3-C (機械システム分野)</li>
 <li><a href="https://twitter.com/akira_tech">@akira_tech</a></li>
+<li><a href="mailto:taikimajima@gmail.com">taikimajima@gmail.com</a></li>
 </ul>
 </li>
 </ul>
