--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2>
 <a id="申込みページはこちら" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページは<a href="http://goo.gl/forms/wy6l497ar7">こちら</a>
 </h2>
-<h3><em>早期申込割引実施中！　申し込みはお早めに</em></h3>
+<p><em>早期申込割引実施中！　申し込みはお早めに</em></p>
 
 <h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
