--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <a id="その他" class="anchor" href="#%E3%81%9D%E3%81%AE%E4%BB%96" aria-hidden="true"><span class="octicon octicon-link"></span></a>その他</h3>
 
 <ul>
-<li>会場設備(<a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a></li>)
+<li>会場設備(<a href="http://kanda-lounge.com/service">http://kanda-lounge.com/service</a>)</li>
 <li>ドリンクバーです！</li>
 <li>軽食(?)も用意します! (宅配ピザ等 / 希望があれば申込時に)</li>
 <li><em>食べ物/飲み物 持ち込み歓迎です!</em></li>
