--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Year-end-party-2015 by kyontan</title>
+    <title>東工大附属 8期 (2015/3卒) 忘年会 in 2015</title>
   </head>
 
   <body>
