--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Year-end-party-2015</h1>
-        <h2>東工大附属 忘年会 in 2015</h2>
+        <h1>東工大附属 忘年会 in 2015</h1>
+        <h2>Year End Party in 2015</h2>
         <a href="https://github.com/kyontan/year-end-party-2015" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
