--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>東工大附属 忘年会 in 2015</title>
+    <title>東工大附属 8期 忘年会 in 2015</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>東工大附属 忘年会 in 2015</h1>
+        <h1>東工大附属 8期 忘年会 in 2015</h1>
         <h2>Year End Party in 2015</h2>
         <a href="https://github.com/kyontan/year-end-party-2015" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -72,7 +72,7 @@
 <li>軽食(?)も用意します! (宅配ピザ等 / 希望があれば申込時に)</li>
 <li><em>食べ物/飲み物 持ち込み歓迎です!</em></li>
 <li>電源 / Wi-Fi あり</li>
-<li><b>何年卒でも大丈夫です! 卒業していなくても大丈夫です!</b></li>
+<li><b>基本的に8期 (2015/3卒) の方を対象としていますが、何年卒でも大丈夫です!</b></li>
 </ul>
 
 <h2>
