--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2>
 <a id="申込みページはこちら" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページは<a href="http://goo.gl/forms/wy6l497ar7">こちら</a>
 </h2>
-<p><em>早期申込割引実施中！　申し込みはお早めに</em></p>
+<!--<p><em>早期申込割引実施中！　申し込みはお早めに</em></p>-->
 
 <h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
@@ -45,6 +45,7 @@
 <li>参加申込みの受付を開始しました (2015/12/3 18:05)</li>
 <li>キャンセル方法について記載しました  (2015/12/3 18:35)</li>
 <li>卒業年度の制限を撤廃しました。皆さんの応募をお待ちしています! (2015/12/4 0:40) </li>
+<li>早期申込特別割引期間終了に伴い修正しました(2015/12/14 15:20) </li>
 </ul>
 
 <h3>
@@ -88,7 +89,8 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li><b>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</b></li>
+<li><strike><b>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</b></strike></li>
+<li>早期申込特別割引を終了しました。引き続き申し込みお待ちしています。</li>
 </ul>
 
 <h4>
