--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li><strike><b>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</b></strike></li>
+<li><strike>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</strike></li>
 <li>早期申込特別割引を終了しました。引き続き申し込みお待ちしています。</li>
 </ul>
 
