--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>東工大附属 8期 忘年会 in 2015</title>
+    <title>東工大附属 8期 忘年会 in 2016</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>東工大附属 8期 忘年会 in 2015</h1>
-        <h2>Year End Party in 2015</h2>
-        <a href="https://github.com/kyontan/year-end-party-2015" class="button"><small>View project on</small> GitHub</a>
+        <h1>東工大附属 8期 忘年会 in 2016</h1>
+        <h2>Year End Party in 2016</h2>
+        <a href="https://github.com/akira2048/year-end-party-2016" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -29,30 +29,26 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h2>
-<a id="申込みページはこちら" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページは<a href="http://goo.gl/forms/wy6l497ar7">こちら</a>
+<a id="申込みページはこちら" class="anchor" href="#%E7%94%B3%E8%BE%BC%E3%81%BF%E3%83%9A%E3%83%BC%E3%82%B8%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>申込みページは<a href="https://goo.gl/forms/SZtZWdhUT7yofEN22">こちら</a>
 </h2>
-<!--<p><em>早期申込割引実施中！　申し込みはお早めに</em></p>-->
+<p><em>早期申込割引実施中！　申し込みはお早めに</em></p>
 
 <h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>概要</h2>
-<p>東工大附属卒の人たちが集まってわいわい年を忘れようという催しです。</p>
+<p>今年もやります！東工大附属卒の人たちが集まってわいわい年を忘れようという催しです。</p>
 
 <h3>
 <a id="更新履歴" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%B1%A5%E6%AD%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a>更新履歴</h3>
 
 <ul>
-<li>早期申込割引 / LT (ライトニングトーク) のお知らせについて追記しました (2015/12/3 17:40)</li>
-<li>参加申込みの受付を開始しました (2015/12/3 18:05)</li>
-<li>キャンセル方法について記載しました  (2015/12/3 18:35)</li>
-<li>卒業年度の制限を撤廃しました。皆さんの応募をお待ちしています! (2015/12/4 0:40) </li>
-<li>早期申込特別割引期間終了に伴い修正しました(2015/12/14 15:20) </li>
+<li>サイトを解説しました。参加申し込みを開始しました(2016/12/11)</li>
 </ul>
 
 <h3>
 <a id="日時" class="anchor" href="#%E6%97%A5%E6%99%82" aria-hidden="true"><span class="octicon octicon-link"></span></a>日時</h3>
 
 <ul>
-<li>12/26 (土) 19:30 - 22:30</li>
+<li>12/27 (火) 19:30 - 22:30</li>
 </ul>
 
 <h3>
@@ -80,8 +76,8 @@
 <a id="募集" class="anchor" href="#%E5%8B%9F%E9%9B%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>募集</h2>
 
 <ul>
-<li>Google Forms で 12/3 - 募集中</li>
-<li><a href="http://goo.gl/forms/wy6l497ar7">http://goo.gl/forms/wy6l497ar7</a></li>
+<li>Google Forms で 12/11 - 募集中</li>
+<li><a href="https://goo.gl/forms/SZtZWdhUT7yofEN22">https://goo.gl/forms/SZtZWdhUT7yofEN22</a></li>
 </ul>
 
 <h3>
@@ -89,8 +85,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li><strike>12/10 (木) までに申込みされた方には、早期申込割引として 100円引きといたします。</strike></li>
-<li>早期申込特別割引を終了しました。引き続き申し込みお待ちしています。</li>
+<li><strike>12/18(日) までに申込みされた方には、早期申込割引として 100円引きといたします。</strike></li>
 </ul>
 
 <h4>
@@ -115,7 +110,7 @@
 <h3>
 <a id="連絡事項" class="anchor" href="#%E9%80%A3%E7%B5%A1%E4%BA%8B%E9%A0%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>連絡事項</h3>
 
-<p>アルコールは出ません</p>
+<p>アルコールは出ません。持ち込みもご遠慮ください</p>
 
 <h3>
 <a id="主催--連絡先" class="anchor" href="#%E4%B8%BB%E5%82%AC--%E9%80%A3%E7%B5%A1%E5%85%88" aria-hidden="true"><span class="octicon octicon-link"></span></a>主催 / 連絡先</h3>
@@ -134,7 +129,7 @@
 <ul>
 <li>2015/3卒 元3-C (機械システム分野)</li>
 <li><a href="https://twitter.com/akira_tech">@akira_tech</a></li>
-<li><a href="mailto:taikimajima@gmail.com">taikimajima@gmail.com</a></li>
+<li><a href="mailto:ak1ra@ht.sfc.keio.ac.jp">ak1ra@ht.sfc.keio.ac.jp</a></li>
 </ul>
 </li>
 </ul>
