--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li><strike>12/18(日) までに申込みされた方には、早期申込割引として 100円引きといたします。</strike></li>
+<li>12/18(日) までに申込みされた方には、早期申込割引として 100円引きといたします。</li>
 </ul>
 
 <h4>
