--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a id="更新履歴" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%B1%A5%E6%AD%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a>更新履歴</h3>
 
 <ul>
-<li>サイトを解説しました。参加申し込みを開始しました(2016/12/11)</li>
+<li>サイトを開設しました。参加申し込みを開始しました(2016/12/11)</li>
 </ul>
 
 <h3>
