--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <ul>
 <li>神田ラウンジ (予定) (<a href="http://kanda-lounge.com">http://kanda-lounge.com</a>)</li>
 <li>神田駅 徒歩2分</li>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1021.3868832287955!2d139.77093211756207!3d35.69274222141734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c018ab26521%3A0x2a771381e4b0e2e0!2sKANDA+lounge!5e0!3m2!1sja!2sjp!4v1481701139485" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 <li><a href="http://kanda-lounge.com/access">http://kanda-lounge.com/access</a></li>
 </ul>
 
@@ -117,15 +118,14 @@
 
 <ul>
 <li>田中 京介
-
 <ul>
 <li>2015/3卒 元3-B (情報システム分野)</li>
 <li><a href="https://twitter.com/sukuhino">@sukuhino</a></li>
 <li><a href="mailto:kyontan@live.jp">kyontan@live.jp</a></li>
 </ul>
 </li>
-<li>真島 大樹
 
+<li>真島 大樹
 <ul>
 <li>2015/3卒 元3-C (機械システム分野)</li>
 <li><a href="https://twitter.com/akira_tech">@akira_tech</a></li>
