--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <a id="lt-ライトニングトーク" class="anchor" href="#lt-%E3%83%A9%E3%82%A4%E3%83%88%E3%83%8B%E3%83%B3%E3%82%B0%E3%83%88%E3%83%BC%E3%82%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>LT (ライトニングトーク)</h3>
 
 <ul>
-<li>近況報告とか何か話したいことを <em>5分</em> 程度で発表出来る場を設けたいと思っています。→<a href="http://shibuya.pm.org/blosxom/common/lightning_talks.html>"LTとは?</a></li>
+<li>近況報告とか何か話したいことを <em>5分</em> 程度で発表出来る場を設けたいと思っています。→<a href="http://shibuya.pm.org/blosxom/common/lightning_talks.html">LTとは?</a></li>
 <li>テーマ不問、美味しいことでもやったことでもやりたいことでも</li>
 <li>プロジェクター/PC は用意します</li>
 <li>参加希望の方は 申込時の備考欄 または 主催(田中) までご連絡ください。</li>
