edit change log

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <ul>
 <li>サイトを開設しました。参加申し込みを開始しました(2016/12/11)</li>
-<li>神田ラウンジの地図を載せました。LTについて解説しているサイトのリンクを貼りました</li>
+<li>神田ラウンジの地図を載せました。LTについて解説しているサイトのリンクを貼りました(2016/12/14)</li>
 </ul>
 
 <h3>
