--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
 <ul>
 <li>サイトを開設しました。参加申し込みを開始しました(2016/12/11)</li>
-<li>神田ラウンジの地図を載せました。LTについて解説しているサイトのリンクを貼りました(2016/12/14)</li>
+<li>神田ラウンジの地図を載せました。</li>
+<li>LTについて解説しているサイトのリンクを貼りました(2016/12/14)</li>
+<li>早期申込割引期間を延長しました(2016/12/19)</li>
 </ul>
 
 <h3>
@@ -87,7 +89,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li>12/18(日) までに申込みされた方には、早期申込割引として 100円引きといたします。</li>
+<li>12/19(月) までに申込みされた方には、早期申込割引として 100円引きといたします。</li>
 </ul>
 
 <h4>
