--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
 <ul>
 <li>サイトを開設しました。参加申し込みを開始しました(2016/12/11)</li>
-<li>神田ラウンジの地図を載せました。</li>
+<li>神田ラウンジの地図を載せました。(2016/12/14)</li>
 <li>LTについて解説しているサイトのリンクを貼りました(2016/12/14)</li>
 <li>早期申込割引期間を延長しました(2016/12/19)</li>
+<li>早期申込割引期間が終了しました。引き続き参加者募集中です</li>
 </ul>
 
 <h3>
@@ -89,7 +90,7 @@
 
 <ul>
 <li>3000円 (当日に現金で)</li>
-<li>12/19(月) までに申込みされた方には、早期申込割引として 100円引きといたします。</li>
+<strike><li>12/19(月) までに申込みされた方には、早期申込割引として 100円引きといたします。</li></strike>
 </ul>
 
 <h4>
