--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li>神田ラウンジの地図を載せました。(2016/12/14)</li>
 <li>LTについて解説しているサイトのリンクを貼りました(2016/12/14)</li>
 <li>早期申込割引期間を延長しました(2016/12/19)</li>
-<li>早期申込割引期間が終了しました。引き続き参加者募集中です</li>
+<li>早期申込割引期間が終了しました。引き続き参加者募集中です(2016/12/20)</li>
 </ul>
 
 <h3>
